Colaboratory를 통해 생성됨

--- a/if_else_quest_gongmyeongyun.ipynb
+++ b/if_else_quest_gongmyeongyun.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLANvQ5vfOjMmxafdAFLVC",
+      "authorship_tag": "ABX9TyNKh4oIni8eEHNL+g6xB3gm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,27 +28,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "C8YQ347mZ3eY",
-        "outputId": "2eef8861-c4ff-4193-f4c3-dc0d79533377"
+        "outputId": "114ed78f-ee4d-48b4-b0ee-a383b5b23f53"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "오른쪽\n",
+            "왼쪽\n",
             "프로그램 종료\n"
           ]
         }
       ],
       "source": [
         "load = 1\n",
-        "if (load < 1) :\n",
+        "if (load == 1) :\n",
         "  pass\n",
         "  print(\"왼쪽\")\n",
         "else :\n",
