Colaboratory를 통해 생성됨

--- a/if_elif_else_quest_gongmyeongyun.ipynb
+++ b/if_elif_else_quest_gongmyeongyun.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNU30wIqALZ3H8OfxqnuJ+F",
+      "authorship_tag": "ABX9TyNYx6LFIgX9IldKMxsK4vvP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "j6-ijIH5xMyQ",
-        "outputId": "20f57e6a-715e-4f02-8f9e-04b43632280e"
+        "outputId": "a6c3df0e-e6ba-4130-e9b9-d1136f112781"
       },
       "outputs": [
         {
@@ -51,13 +51,13 @@
         "if(score >= 90) :\n",
         "  print(\"A학점\")\n",
         "  pass\n",
-        "elif(80 <= score < 90) :\n",
+        "elif(score >= 80) :\n",
         "  print(\"B학점\")\n",
         "  pass\n",
-        "elif(70 <= score < 80) :\n",
+        "elif(score >= 70) :\n",
         "  print(\"C학점\")\n",
         "  pass\n",
-        "elif(60 <= score < 70) :\n",
+        "elif(score >= 60) :\n",
         "  print(\"D학점\")\n",
         "  pass\n",
         "else :\n",
